Primeiro Commit - Primeira aula de CSS

--- a/aula04/index.html
+++ b/aula04/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
 	<div>
-		<h1>Paragrafo 1</h1>
+		<h1 id="p1">Paragrafo 1</h1>
 		<p>Teste teste</p>
-	</div>
+  </div>
+  
+  <div id="fundo1">
+		<h1 id="p2">Paragrafo 2</h1>
+		<p>Novo parágrafo</p>
+  </div>
+
+  <div class="alerta1">
+		<h1 id="p3">Paragrafo 3</h1>
+		<p>Novo parágrafo</p>
+  </div>
+
+  <div class="alerta1">
+		<h1 id="p4">Paragrafo 4</h1>
+		<p>Novo parágrafo</p>
+  </div>
+  
 </body>
 </html>
